# events

./: CMakeLists.txt  README.md  try-events.sln
include/: events.h
tests/: CMakeLists.txt  main.cc
try-events/: events.h  main.cc  try-events.vcxproj  try-events.vcxproj.filters
